clusters/on-prem-cluster/core/keycloak/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: keycloak
  labels:
    name: keycloak
    goldilocks.fairwinds.com/enabled: "true"
