clusters/on-prem-cluster/core/keycloak/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: keycloak-ingress
    namespace: keycloak
    annotations:
        kubernetes.io/ingress.class: traefik
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:7e5QLAa/I7230rtNxo8eTJsQlIQrs2qzSQ==,iv:9HS5VL5nNauMWG9h+c9ahGBQitEbxE0TKoUqi8gSIfg=,tag:mNKazRAKKwxlLZ8cSFTfNg==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:cUqbeKO21hYSYRiK7TORJ04B5bt/orwv3A==,iv:arZoitzOGlhEsA0K0BP0qavQR2uak8xvEJ/Tvynk5as=,tag:VtqadBapQ9sUuTxS7BxYUg==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: keycloak-keycloak
                        port:
                            number: 80
                - path: /auth
                  pathType: Prefix
                  backend:
                    service:
                        name: keycloak-keycloak
                        port:
                            number: 80
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1xl8mrtu70kvhjdl2nva6dpt8wsy3fhmz6605fmwjujc3zztyeyzqd07nvv
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZQjRrNk45MlNMUWZrdlY5
[...]
            7AOaMTb1ktwLJ+aIt2kZlVW34bHCHkuPg6GeDLKCHR9/hZc1qVJuUg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-05-27T11:37:54Z"
    mac: ENC[AES256_GCM,data:Ch6TBhKcJkx/0r0JC12M/uoc+P8hD3YX0KVPDxlIz91LmLz4UDD/zsqzsVdHa50nm+iNlvfoLAvJPOFFqGCIRCUKd7oSRqyHDdDcVMRETswwkhy0OxE7TSd0GxiHY+736nRJXF1+6WF7JEOM4GHvDcARilgNryOkckEB1UeKIEk=,iv:pGHZynmghq5m2CwYPxe2xzMU+bMlmuXZPY/PnUnfe3A=,tag:pciF7zbgXYgPwgZWPO/9gg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|hosts|host|externalUrl)$
    version: 3.7.3
